[gd_scene load_steps=3 format=3 uid="uid://naeat17ycvf5"]

[ext_resource type="Script" path="res://scripts/message_window.gd" id="1_b7318"]
[ext_resource type="Texture2D" uid="uid://b7s8pa6ri67gs" path="res://Triangle.png" id="2_x5p6v"]

[node name="Message Window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_b7318")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -110.0
offset_right = 410.0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="WidePanel" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(450, 120)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/WidePanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/WidePanel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/WidePanel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="ThinPanel" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(450, 20)
layout_mode = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ThinPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="MarginContainer/ThinPanel/MarginContainer"]
layout_mode = 2

[node name="ButtonContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(490, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 480.0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("2_x5p6v")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="ButtonContainer/TextureButton" to="." method="_on_texture_button_pressed"]
